--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ file.rmsh_log
 file.rth
 menust.tmp
 scratch
+file.parm
+file.full
+file.esav
+file.DSP
+file.db
+cmatrix.txt
+cmatrix.out
+ECT_RES.csv
